# mitsuba3-amvpt

./: .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmp.py  imgui.ini  to_gif.py
include/mitsuba/core/: class.h
include/mitsuba/render/: bsdf.h  sensor.h  wrap.h
src/: CMakeLists.txt
src/bsdfs/: blendbsdf.cpp  bumpmap.cpp  diffuse.cpp  hair.cpp  mask.cpp  measured.cpp  measured_polarized.cpp  normalmap.cpp  plastic.cpp  pplastic.cpp  principled.cpp  principledthin.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  twosided.cpp
src/core/: xml.cpp
src/integrators/: CMakeLists.txt  dr_macros.h  mvpath.cpp  mvpath.h  mvpath_multi.h  mvpath_single.h
src/integrators/experiments/: adaptive_on_primary.h
src/mitsuba/: CMakeLists.txt  mi_args.h  mitsuba.cpp  mitsuba_render.cpp  mitsuba_render.h  preset.h  program.cpp  program.h  util.h  window.cpp  window.h
src/mitsuba/gui/: CMakeLists.txt
src/render/: CMakeLists.txt  sensor.cpp  wrap.cpp
src/sensors/: CMakeLists.txt  batch.cpp  grid.cpp  perspective.cpp  thinlens.cpp
src/wrappers/: CMakeLists.txt  any.cpp
uml/: class_diagram_types.bak  miclass_diag.puml  miextend.puml  mitsuba_class_diagram.bak
